fix project buttons on mobile

--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -101,14 +101,19 @@
       
     }
   }
-
+  .project-buttons {
+    text-align: center;
+  }
   .project-button {
+    box-sizing: border-box;
+    display: inline-block;
     font-family: $primary-font;
     font-weight: 400;
     text-decoration: none;
+    min-width: 153px;
     padding: 0.5rem;
     cursor: pointer;
-    margin: 0 0.2rem;
+    margin: 0.5rem 0.2rem 0 0.2rem;
     &:hover {
       font-size: 1rem;
       text-decoration: none;
@@ -168,6 +173,13 @@
       &:hover {
         transform: translate(0, -5px);
       }
+    }
+    .project-buttons {
+      text-align: left;
+    }
+    .project-button {
+      display: inline-block;
+      margin: 0 0.2rem;
     }
 
     .about-container {
